# semafor

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml
config/: asgi.py  jinja2.py  settings.py  urls.py
locale/ca/LC_MESSAGES/: django.mo  django.po
semafor/: admin.py  api_urls.py  apps.py  banking.py  consumers.py  models.py  routing.py  tenders.py  time_control.py  urls.py  utils.py  views.py
semafor/migrations/: 0001_initial.py  0002_project_confirmed_and_more.py  0002_workassessment.py  0003_alter_projectworkassignment_assignment.py  0003_tag_transaction_transactionprojectassignment_and_more.py  0004_expectedtransaction_alter_transaction_options_and_more.py  0004_workermonthdedication.py  0005_alter_workermonthdedication_unique_together.py  0005_projectalias.py  0006_remove_project_date_end_remove_project_date_start_and_more_squashed_0008_alter_projectalias_unique_together.py  0009_worker_app_id_worker_app_token.py  0010_alter_worker_app_token.py  0011_alter_projectalias_unique_together.py  0012_remove_project_income.py  0013_alter_projectalias_alias.py  0014_remove_worker_app_id.py
semafor/static/: style.css
semafor/templates/fragments/: assessment_all.html  assessment_total.html  assignment.html  assignment_total.html  create_assignment.html  dedication.html  forecast_all.html  forecast_total.html  project_assessment.html  project_forecast.html  project_month_assessment.html  project_month_forecast.html  update_assignment.html  update_dedication.html  update_forecast.html  update_project_date_start_done.html  (+8 more)
(+18 files in other folders)
