[project]
name = ""
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "django",
    "jinja2",
    "channels",
    "daphne",
    "channels-redis",
    "babel",
    "django-debug-toolbar",
    "whitenoise",
    "psycopg2-binary",
    "pandas[excel]",
    "matplotlib",
    "ipython",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
